--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@types/node": "^13.9.0",
         "@types/react": "^16.9.23",
         "@types/react-dom": "^16.9.5",
+        "sass": "^1.26.3",
         "typescript": "^3.8.3"
     }
 }
