--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
         "react-dom": "^16.13.1"
     },
     "devDependencies": {
+        "@types/micro-cors": "^0.1.0",
         "@types/node": "^13.9.8",
         "@types/react": "^16.9.29",
         "@types/react-dom": "^16.9.5",
+        "micro-cors": "^0.1.1",
         "sass": "^1.26.3",
         "typescript": "^3.8.3"
     }
