--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@types/node": "^13.9.8",
         "@types/react": "^16.9.29",
         "@types/react-dom": "^16.9.5",
+        "isomorphic-unfetch": "^3.0.0",
         "micro-cors": "^0.1.1",
         "sass": "^1.26.3",
         "typescript": "^3.8.3"
